--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,9 +8,9 @@
         <a mat-button [routerLink]="['/client-register']" routerLinkActive="active">Clientes</a>
         <a mat-button [routerLink]="['/invoice']" routerLinkActive="active">Facturar</a>
       </nav>
-      <a routerLink="/order" class="text-menu" mat-raised-button [matBadge]="0" matBadgeColor="warn">
-        <mat-icon>shopping_cart</mat-icon>
-        Carrito
+      <a [routerLink]="['/login']" class="text-menu" mat-raised-button>
+        <mat-icon>login</mat-icon>
+        Sign in
       </a>
     </div>
   </mat-toolbar-row>
