--- a/src/app/product/components/product-register/product-register.component.html
+++ b/src/app/product/components/product-register/product-register.component.html
@@ -104,4 +104,6 @@
       <button mat-raised-button color="primary" type="submit" [disabled]="enabled">Submit</button>
     </mat-card-actions>
   </mat-card>
+  <p>{{productForm.invalid}}</p>
 </form>
+
