--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,1 +1,53 @@
-<p>home works!</p>
+<div class="container mt-5 mb-5">
+  <div class="row">
+    <div class="col-sm-6">
+      <h3>¿Quienes somos?</h3>
+      <p>
+        Somos una empresa innovadora dedicada a la producción y comercialización de alimentos.
+        Nuestros productos se caracterizan por ser sanos y naturales, pero por sobre todo prácticos.
+
+      </p>
+      <p>
+        Procuramos generar hábitos de alimentación saludables por eso nuestro foco se ve centrado en
+        facilitar alimentos listos para su consumo. De este modo nuestros clientes podrán ahorrar
+        tiempo al momento de la compra y de la cocina, recibiendo productos en la comodidad de
+        su domicilio junto con flamantes recetas y originales métodos de cocción.
+      </p>
+    </div>
+    <div class="col-sm-6">
+      <div id="nextPrevious" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#nextPrevious" data-slide-to="0" class="active"></li>
+          <li data-target="#nextPrevious" data-slide-to="1"></li>
+          <li data-target="#nextPrevious" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://dam.cocinafacil.com.mx/wp-content/uploads/2019/05/alimentos-con-cascara.png"
+            class="d-block w-100" width="500" height="310" id="my-border" alt="Carne">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="https://www.sabervivirtv.com/medio/2021/04/09/frutas-y-verduras-no-solo-importa-la-cantidad-tambien-la-variedad_512c27be_1200x630.jpg"
+             class="d-block w-100" width="500" height="310" id="my-border" alt="Carne">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="https://www.eluniverso.com/resizer/MsTA2hnfrBZEZJCEVC2iwAtET0w=/1115x670/smart/filters:quality(70)/cloudfront-us-east-1.images.arcpublishing.com/eluniverso/GF4REHO2ZRA2XF7WVWKL5JQRVQ.jpg"
+            class="d-block w-100" width="500" height="310" id="my-border" alt="Carne">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#nextPrevious" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#nextPrevious" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
