--- a/src/app/product-consult/components/product-consult/product-consult.component.html
+++ b/src/app/product-consult/components/product-consult/product-consult.component.html
@@ -39,13 +39,13 @@
     <!-- Symbol Column -->
     <ng-container matColumnDef="purchasePrice">
       <th mat-header-cell *matHeaderCellDef> Precio compra </th>
-      <td mat-cell *matCellDef="let element"> {{element.purchasePrice}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.purchasePrice |currency: 'COP'}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="salePrice">
       <th mat-header-cell *matHeaderCellDef> Precio venta </th>
-      <td mat-cell *matCellDef="let element"> {{element.salePrice}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.salePrice |currency: 'COP'}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
@@ -60,9 +60,21 @@
       <td mat-cell *matCellDef="let element"> {{element.supplier.nit}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef> On/Off </th>
+      <td mat-cell *matCellDef="let element">
+         <button *ngIf="element.status == 'Active'" mat-raised-button type="submit" color="warn" (click)="toDisable(element)">
+           <mat-icon>do_not_disturb</mat-icon>
+         </button>
+         <button *ngIf="element.status == 'Inactive'" mat-raised-button type="submit" color="primary" (click)="toDisable(element)">
+          <mat-icon>task_alt</mat-icon>
+        </button>
+       </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[2, 3, 5]" showFirstLastButtons></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[4, 5, 10]" showFirstLastButtons></mat-paginator>
 </div>
