--- a/src/app/sales/components/sales/sales.component.html
+++ b/src/app/sales/components/sales/sales.component.html
@@ -28,18 +28,18 @@
 
     <ng-container matColumnDef="subtotal">
       <th mat-header-cell *matHeaderCellDef> SubTotal </th>
-      <td mat-cell *matCellDef="let element"> {{element.subtotal}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.subtotal |currency: 'COP'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="totalIva">
       <th mat-header-cell *matHeaderCellDef> Total Iva </th>
-      <td mat-cell *matCellDef="let element"> {{element.totalIva}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.totalIva |currency: 'COP'}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="total">
       <th mat-header-cell *matHeaderCellDef> Total </th>
-      <td mat-cell *matCellDef="let element"> {{element.total}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.total |currency: 'COP'}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
