password encryption completed

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -23,7 +23,7 @@
           <a *ngIf="user.role == 'AvaluoLeader'" mat-button [routerLink]="['/supplier-register']" routerLinkActive="active">Proveedores</a>
           <a *ngIf="user.role== 'SalesPrfsnal'" mat-button [routerLink]="['/invoice']" routerLinkActive="active">Facturar</a>
           <a *ngIf="user.role== 'SalesPrfsnal'" mat-button [routerLink]="['/sales']" routerLinkActive="active">Ventas</a>
-
+          <a *ngIf="user.role== 'SalesPrfsnal'" mat-button [routerLink]="['/user-register']" routerLinkActive="active">Usuarios</a>
 
         </span>
 
